# animal-classification-mlops

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
api/: __init__.py  main.py
configs/: config.yaml
scripts/: evaluate.py  predict.py  train.py
src/: __init__.py
src/data/: __init__.py  dataset.py  preprocessing.py
src/evaluation/: __init__.py  evaluator.py  predictor.py
src/models/: __init__.py  cnn_models.py  model_factory.py  resnet_model.py
src/training/: __init__.py  early_stopping.py  trainer.py
src/utils/: __init__.py  config.py  logger.py  metrics.py
tests/: __init__.py  conftest.py
